hw6_lab10/tests/errors/sem_not_non_boolean.kt
// EXPECT: semantic error — ! on non-Boolean
fun main() {
    val r = !42
}
